@@ -1,3 +1,10 @@
+2025-03-09  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* poke/pk-term.c (pk_term_hyperlink_1): Only keep invocation of
+	`styled_ostream_set_hyperlink' under
+	`ifdef HAVE_TEXTSTYLE_HYPERLINK_SUPPORT' guard.
+	(pk_term_end_hyperlink_1): Likewise.
+
 2025-03-04  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* pickles/btf.pk (BTF_Type::has_type_ref): Use `int<32>' instead of `int'.
